# ANN-Classification-Churn

./: experiments.ipynb  hyperparametertuningann.ipynb  main.py  model.h5  prediction.ipynb  pyproject.toml  regression_model.h5  salaryregression.ipynb
annclassification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/fit/20251209-191231/train/: events.out.tfevents.1765325551.LEELAKARTHIK.21252.0.v2
logs/fit/20251209-191231/validation/: events.out.tfevents.1765325555.LEELAKARTHIK.21252.1.v2
