[project]
name = "annclassification"
version = "0.1.0"
description = "annclassification for churn prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "pickle5>=0.0.12",
]
