[project]
name = "annclassification"
version = "0.1.0"
description = "annclassification for churn prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "streamlit==1.32.2",
    "tensorflow==2.17.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
