[project]
name = "annclassification"
version = "0.1.0"
description = "annclassification for churn prediction"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "scikeras==0.13.0",
    "streamlit==1.32.2",
    "tensorflow==2.17.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
exclude = ["logs*", "regressionlogs*"]
